--- a/Salvando Huellitas/src/views/home/home.styles.css
+++ b/Salvando Huellitas/src/views/home/home.styles.css
@@ -1,8 +1,3 @@
-@font-face {
-  font-family: 'PokemonFont';
-  src: url('/assets/fonts/pokemon-font.ttf') format('truetype');
-}
-
 .home {
   display: flex;
   flex-direction: column;
@@ -25,14 +20,15 @@
 }
 
 .card {
-  background-color: rgba(255, 255, 255, 0.308);
+  background-color: rgba(255, 255, 255, 0.5); 
   border-radius: 10px;
   padding: 20px;
   margin: 10px;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1); 
 }
 
 .card h3 {
-  text-transform: capitalize; 
+  text-transform: capitalize;
 }
 
 .detail-page {
@@ -43,24 +39,22 @@
   color: #fff;
 }
 
-.filter-sort {
-  display: flex;
-  justify-content: center;
-  margin: 20px 0;
-  gap: 10px;
-}
 
-.filter-select {
-  padding: 10px;
-  font-size: 16px;
-  border: 2px solid #ddd;
-  border-radius: 5px;
-  background-color: white;
-  font-family: 'PokemonFont', sans-serif;
-  transition: border-color 0.3s, box-shadow 0.3s;
-}
+@media (max-width: 768px) {
+  .home {
+    padding: 10px;
+  }
 
-.filter-select:focus {
-  border-color: red;
-  box-shadow: 0 0 5px rgba(255, 0, 0, 0.5);
+  .search-bar {
+    width: 100%;
+    font-size: 14px;
+  }
+
+  .card {
+    padding: 15px;
+  }
+
+  .detail-page {
+    padding: 15px;
+  }
 }
