--- a/Salvando Huellitas/src/index.css
+++ b/Salvando Huellitas/src/index.css
@@ -28,7 +28,10 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #f0f0f0; 
+  color: #333;
 }
+
 
 h1 {
   font-size: 3.2em;
