--- a/Salvando Huellitas/src/views/detail/detail.styles.css
+++ b/Salvando Huellitas/src/views/detail/detail.styles.css
@@ -1,44 +1,64 @@
-@font-face {
-  font-family: 'PokemonFont';
-  src: url('/assets/fonts/pokemon-font.ttf') format('truetype');
-}
-
-.detail-page {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
-  background-image: url('https://i.imgur.com/JZ6t2A7.jpg');
-  background-size: cover;
-  background-position:bottom;
-  background-repeat: no-repeat;
-  min-height: 100vh;
-  color: rgba(88, 87, 87, 0.822); 
-}
-
-.detail-page img {
-  width: 200px;
-  height: 200px;
-  object-fit: cover;
-  margin-bottom: 20px;
-}
-
-.detail-page p {
-  margin: 5px 0;
-}
-
-.detail-page .attributes {
-  background-color: rgba(0, 0, 0, 0.452); 
-  color: white;
-  padding: 20px;
-  border-radius: 10px;
+.animal-detail {
+  max-width: 800px; 
+  margin: 50px auto; 
+  padding: 30px;
+  border-radius: 12px;
+  background: #fcfdfc; 
+  box-shadow: 5px 5px 10px 1px rgba(0, 0, 0, 0.1); 
   text-align: center;
-  width: 80%;
-  max-width: 650px;
+  position: relative;
 }
 
-.pokemon-name {
-  font-family: 'PokemonFont', sans-serif;
-  text-transform: capitalize;
+.animal-image {
+  width: 200px; 
+  height: 200px; 
+  object-fit: cover;
+  border-radius: 50%; 
+  border: 6px solid #ddd; 
+  position: absolute;
+  top: -80px; 
+  left: 50%; 
+  transform: translateX(-50%); 
+}
+
+.animal-detail-content {
+  padding-top: 100px; 
+}
+
+.animal-detail h2 {
+  font-size: 36px; 
+  color: #333; 
   margin-bottom: 20px;
+}
+
+.animal-detail p {
+  font-size: 18px; 
+  margin: 10px 0;
+  text-align: left; 
+}
+
+.animal-detail p strong {
+  font-weight: 600; 
+  color: #555; 
+}
+
+.animal-detail p span {
+  font-weight: 400; 
+  color: #777; 
+}
+
+.back-button {
+  background-color: #000000; 
+  color: white; 
+  border: none; 
+  padding: 10px 20px; 
+  border-radius: 5px; 
+  font-size: 16px; 
+  cursor: pointer; 
+  margin-top: 20px; 
+  transition: transform 0.3s ease; 
+}
+
+.back-button:hover {
+  transform: scale(1.05); 
 }
