--- a/Salvando Huellitas/src/components/card/card.styles.css
+++ b/Salvando Huellitas/src/components/card/card.styles.css
@@ -1,8 +1,3 @@
-@font-face {
-  font-family: 'PokemonFont';
-  src: url('/assets/fonts/pokemon-font.ttf') format('truetype');
-}
-
 .card-link {
   text-decoration: none;
   color: inherit;
@@ -30,6 +25,6 @@
 }
 
 .pokemon-name {
-  font-family: 'PokemonFont', sans-serif;
+  font-family: sans-serif;
   text-transform: capitalize;
 }
