--- a/Salvando Huellitas/src/views/contact/contact.styles.css
+++ b/Salvando Huellitas/src/views/contact/contact.styles.css
@@ -110,3 +110,20 @@
 .contact-social a:hover {
     color: #f46411; 
 }
+.back-button {
+    background-color: #000000; 
+    color: white; 
+    border: none; 
+    padding: 10px 20px; 
+    border-radius: 8px; 
+    font-size: 2em; 
+    cursor: pointer; 
+    margin-top: 20px; 
+    transition: background-color 0.3s ease, transform 0.3s ease;
+  }
+  
+  .back-button:hover {
+    background-color: #333; 
+    transform: scale(1.05); 
+  }
+  
